opa/k8s-policy-manifest/constraint-online-boutique-readonly-fs-demo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredReadonlyFS
metadata:
  name: online-boutique-require-readonly-fs
  annotations:
    description: "Requires read-only root filesystem (DEMO MODE)"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["online-boutique"]
  parameters:
    message: "All containers must have readOnlyRootFilesystem: true"
